// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TripItem /> should render component with duration 1 1`] = `
<Link 
  className="trip-item-container"
  to="/trips/_id"
>
  <div
    className="header"
  >
    <h2 />
  </div>
  <div
    className="items"
  >
    <div
      className="country"
    >
      country
    </div>
    <DetailsLabel
      type="EXPENCES"
      value="expences"
    >
      <strong>
        Expenses:
      </strong>
       $expences
    </DetailsLabel>
    <DetailsLabel
      type="DURATION"
      value={1}
    >
      <strong>
        Duration:
      </strong>
       1 day
    </DetailsLabel>
    <DetailsLabel
      type="RATING"
      value="rating"
    >
      <strong>
        Rating:
      </strong>
       rating / 5
    </DetailsLabel>
  </div>
</Link >
`;

exports[`<TripItem /> should render component with duration 10 1`] = `
<Link 
  className="trip-item-container"
  to="/trips/_id"
>
  <div
    className="header"
  >
    <h2 />
  </div>
  <div
    className="items"
  >
    <div
      className="country"
    >
      country
    </div>
    <DetailsLabel
      type="EXPENCES"
      value="expences"
    >
      <strong>
        Expenses:
      </strong>
       $expences
    </DetailsLabel>
    <DetailsLabel
      type="DURATION"
      value={10}
    >
      <strong>
        Duration:
      </strong>
       10 days
    </DetailsLabel>
    <DetailsLabel
      type="RATING"
      value="rating"
    >
      <strong>
        Rating:
      </strong>
       rating / 5
    </DetailsLabel>
  </div>
</Link >
`;
